<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">ZID工程模式</string>
    <string name="app_name_title">智驾工程模式</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="delay_time">%1$d/%2$d/%3$d</string>
    <string name="em_activity_gear_mode">当前挡位：%1$s</string>
    <string name="em_activity_gear_mode_null">未获取到挡位</string>
    <string name="em_calibration_adcu_init_lost">校准信息发送失败，请确认服务版本</string>
    <string name="em_calibration_alarm_message1">1. 售后维修过程中，对传感器、传感器周边件进行了更换新件或将原零件复原等拆装操作后，需要进行传感器校准；</string>
    <string name="em_calibration_alarm_message2">2. 售后维修过程中，对域控制器进行了更换新件等操作，需要进行传感器校准。</string>
    <string name="em_calibration_alarm_message3">1. 请在P档下点击开始校准，然后挂D档按仪表屏引导行驶，建议车速30～60km/h；</string>
    <string name="em_calibration_alarm_message4">2. 校准期间，辅助驾驶功能暂不可用，车辆下电或进入超级省电等模式会退出校准。</string>
    <string name="em_calibration_alarm_message5">2人且人员经过专业培训，并且其中1人具有驾验经验。</string>
    <string name="em_calibration_lost">校准维修说明</string>
    <string name="em_calibration_lost_message1">1.校准失败，一般是因为传感器安装角度超过阈值，请首先检查是否有明显安装偏移、缝隙等</string>
    <string name="em_calibration_lost_message2">2.如有明显偏差，请正确安装传感器后重新尝试校准；如无明显偏差，请尝试拆装、拆换传感器或相关对手件后重新尝试校准</string>
    <string name="em_calibration_lost_message3">校准超时，⼀般是因为未适当转弯、道路环境条件不满⾜、⻋速不满⾜等原因引起的校准超时，建议按照要求条件重新尝试校准</string>
    <string name="em_calibration_process_message1">1. 校准前请确认传感器已安装在标准位置，传感器无位置偏移、损坏、表面被遮挡等；</string>
    <string name="em_calibration_process_message10">3. 光线昏暗（如黎明、黄昏、夜晚）、强光直照或斑驳树影下；</string>
    <string name="em_calibration_process_message11">4. 高温、极寒等极端天气；</string>
    <string name="em_calibration_process_message12">5. 潮湿或积水路面（仅针对激光雷达校准）。</string>
    <string name="em_calibration_process_message2">2. 为确保正常校准，请在白天光线充足的环境下按照指引完成校准；</string>
    <string name="em_calibration_process_message3">3. 请在P档下点击开始校准，然后挂D档按组合仪表引导提示(如：请在城区道路进行适量的转弯）行驶，建议车速30~60km/h;</string>
    <string name="em_calibration_process_message4">4. 校准期间，辅助驾驶功能暂不可用；</string>
    <string name="em_calibration_process_message5">5. 请在单次驾驶循环内完成校准，如校准期间车辆下电或进入超级省电等模式会导致校准退出，需要重新校准；</string>
    <string name="em_calibration_process_message6">6. 校准时，需要关闭超级省电模式。</string>
    <string name="em_calibration_process_message7">遇到以下场景、天气时，不建议进行校准，包括但不限于：</string>
    <string name="em_calibration_process_message8">1. 能见度差（大雨、大雪、大雾、沙尘等恶劣天气）；</string>
    <string name="em_calibration_process_message9">2. 场景空旷，道路周围无树木、建筑物、灯杆等物体；</string>
    <string name="em_http_server_url_error">请确认请求地址是否正确</string>
    <string name="em_http_server_usb_error">未检测到U盘</string>
    <string name="em_u_disk_path_key">U盘路径:</string>
    <string name="em_version_info">版本号：%1$s</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="item_view_role_description">Tab</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_content_description">More than %1$d new notifications</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="mtrl_picker_date_header_title">Select a Date</string>
    <string name="mtrl_picker_date_header_unselected">Selected date</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_invalid_format">Invalid format.</string>
    <string name="mtrl_picker_invalid_format_example">Example: %1$s</string>
    <string name="mtrl_picker_invalid_format_use">Use: %1$s</string>
    <string name="mtrl_picker_invalid_range">Invalid range.</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="mtrl_picker_out_of_range">Out of range: %1$s</string>
    <string name="mtrl_picker_range_header_only_end_selected">Start date – %1$s</string>
    <string name="mtrl_picker_range_header_only_start_selected">%1$s – End date</string>
    <string name="mtrl_picker_range_header_selected">%1$s – %2$s</string>
    <string name="mtrl_picker_range_header_title">Select a Date Range</string>
    <string name="mtrl_picker_range_header_unselected">Start date – End date</string>
    <string name="mtrl_picker_save">Save</string>
    <string name="mtrl_picker_text_input_date_hint">Date</string>
    <string name="mtrl_picker_text_input_date_range_end_hint">End date</string>
    <string name="mtrl_picker_text_input_date_range_start_hint">Start date</string>
    <string name="mtrl_picker_text_input_day_abbr">d</string>
    <string name="mtrl_picker_text_input_month_abbr">m</string>
    <string name="mtrl_picker_text_input_year_abbr">y</string>
    <string name="mtrl_picker_toggle_to_calendar_input_mode">Switch to calendar input mode</string>
    <string name="mtrl_picker_toggle_to_day_selection">Tap to switch to selecting a day</string>
    <string name="mtrl_picker_toggle_to_text_input_mode">Switch to text input mode</string>
    <string name="mtrl_picker_toggle_to_year_selection">Tap to switch to selecting a year</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_seconds">秒</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="str_adas_btn_start_check">辅助驾驶校准</string>
    <string name="str_adas_dialog_btn_cancel">取消</string>
    <string name="str_adas_dialog_btn_lost">校准失败，请检查维修后再次尝试</string>
    <string name="str_adas_dialog_btn_next">下一条</string>
    <string name="str_adas_dialog_btn_restart">重新校准</string>
    <string name="str_adas_dialog_btn_start">开始校准</string>
    <string name="str_adas_dialog_btn_timeout">校准超时，可等待2分钟后重新校准</string>
    <string name="str_adas_dialog_ing">校准中</string>
    <string name="str_adas_dialog_notice1">前提条件</string>
    <string name="str_adas_dialog_notice2">校准须知</string>
    <string name="str_adas_dialog_notice3">人员要求</string>
    <string name="str_adas_dialog_notice_failed">校准维修说明</string>
    <string name="str_adas_dialog_notice_process1">操作说明</string>
    <string name="str_adas_dialog_notice_process2">注意事项</string>
    <string name="str_adas_dialog_radio_button_a">前广角，前长焦，左侧前，右侧前摄像头</string>
    <string name="str_adas_dialog_radio_button_b">后广角，左侧后，右侧后摄像头</string>
    <string name="str_adas_dialog_radio_button_c_mode_1">前视，左侧，右侧激光雷达</string>
    <string name="str_adas_dialog_radio_button_c_mode_2">360环视摄像头</string>
    <string name="str_adas_dialog_radio_button_c_mode_3">前视激光雷达</string>
    <string name="str_adas_dialog_radio_button_d">360环视摄像头</string>
    <string name="str_adas_dialog_sensor_selection">校准传感器选择</string>
    <string name="str_adas_dialog_start_ing">校准启动中，请等待</string>
    <string name="str_adas_dialog_success">校准成功后，需要锁车等待5分钟，再次解锁车辆后，本次校准参数才能生效</string>
    <string name="str_adas_dialog_success_title">校准成功</string>
    <string name="str_adas_tcp_connect_title">未连接，正在重连...</string>
    <string name="str_adcu_udp_connect_error">ADUC服务断开连接,请关闭重试！</string>
    <string name="str_log_dir_clean">清空目录</string>
    <string name="str_log_dir_edr_title">目录下EDR日志数:</string>
    <string name="str_log_dir_mcu_title">目录下MCU日志数:</string>
    <string name="str_tcp_btn_start">开启服务</string>
    <string name="str_tcp_btn_stop">关闭服务</string>
    <string name="str_tcp_status">Tcp服务状态:</string>
</resources>