<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical" android:tag="layout/frag_calibration_0" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/font_42" android:textStyle="bold" android:textColor="@color/color_24292B" android:id="@id/tvTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_40" android:text="@string/str_adas_dialog_sensor_selection" android:layout_marginStart="@dimen/dimen_182" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="@dimen/font_30" android:textColor="@color/color_4C4C4C" android:id="@id/tvCarInfo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_37" android:layout_marginEnd="@dimen/dimen_40" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/clCheckBox1" android:background="@drawable/bg_layout_eff1f2" android:layout_width="@dimen/dimen_927" android:layout_height="@dimen/dimen_96" android:layout_marginTop="@dimen/dimen_30" app:layout_constraintStart_toStartOf="@id/tvTitle" app:layout_constraintTop_toBottomOf="@id/tvTitle">
        <CheckBox android:id="@id/checkBox1" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/check_box_style" />
        <TextView android:id="@id/tvBox1" android:text="@string/str_adas_dialog_radio_button_a" app:layout_constraintBottom_toBottomOf="@id/checkBox1" app:layout_constraintStart_toEndOf="@id/checkBox1" app:layout_constraintTop_toTopOf="@id/checkBox1" style="@style/tv_check_box_style" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/clCheckBox2" android:background="@drawable/bg_layout_eff1f2" android:layout_width="@dimen/dimen_927" android:layout_height="@dimen/dimen_96" android:layout_marginStart="@dimen/dimen_52" app:layout_constraintBottom_toBottomOf="@id/clCheckBox1" app:layout_constraintStart_toEndOf="@id/clCheckBox1" app:layout_constraintTop_toTopOf="@id/clCheckBox1">
        <CheckBox android:id="@id/checkBox2" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/check_box_style" />
        <TextView android:id="@id/tvBox2" android:text="@string/str_adas_dialog_radio_button_b" app:layout_constraintBottom_toBottomOf="@id/checkBox2" app:layout_constraintStart_toEndOf="@id/checkBox2" app:layout_constraintTop_toTopOf="@id/checkBox2" style="@style/tv_check_box_style" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/clCheckBox3" android:background="@drawable/bg_layout_eff1f2" android:layout_width="@dimen/dimen_927" android:layout_height="@dimen/dimen_96" android:layout_marginTop="@dimen/dimen_30" app:layout_constraintStart_toStartOf="@id/tvTitle" app:layout_constraintTop_toBottomOf="@id/clCheckBox1">
        <CheckBox android:id="@id/checkBox3" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/check_box_style" />
        <TextView android:id="@id/tvBox3" android:text="@string/str_adas_dialog_radio_button_c_mode_1" app:layout_constraintBottom_toBottomOf="@id/checkBox3" app:layout_constraintStart_toEndOf="@id/checkBox3" app:layout_constraintTop_toTopOf="@id/checkBox3" style="@style/tv_check_box_style" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/clCheckBox4" android:tag="binding_1" android:background="@drawable/bg_layout_eff1f2" android:layout_width="@dimen/dimen_927" android:layout_height="@dimen/dimen_96" android:layout_marginStart="@dimen/dimen_52" app:layout_constraintBottom_toBottomOf="@id/clCheckBox3" app:layout_constraintStart_toEndOf="@id/clCheckBox3" app:layout_constraintTop_toTopOf="@id/clCheckBox3">
        <CheckBox android:id="@id/checkBox4" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/check_box_style" />
        <TextView android:id="@id/tvBox4" android:text="@string/str_adas_dialog_radio_button_d" app:layout_constraintBottom_toBottomOf="@id/checkBox4" app:layout_constraintStart_toEndOf="@id/checkBox4" app:layout_constraintTop_toTopOf="@id/checkBox4" style="@style/tv_check_box_style" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/llNoticeGroup" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_77" app:layout_constraintStart_toStartOf="@id/tvTitle" app:layout_constraintTop_toBottomOf="@id/clCheckBox3">
        <TextView android:textSize="@dimen/font_34" android:textStyle="bold" android:textColor="@color/color_24292B" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_adas_dialog_notice1" />
        <TextView android:textSize="@dimen/font_32" android:textColor="@color/color_4C4C4C" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_19" android:text="@string/em_calibration_alarm_message1" />
        <TextView android:textSize="@dimen/font_32" android:textColor="@color/color_4C4C4C" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_0" android:text="@string/em_calibration_alarm_message2" />
        <TextView android:textSize="@dimen/font_34" android:textStyle="bold" android:textColor="@color/color_24292B" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_54" android:text="@string/str_adas_dialog_notice2" />
        <TextView android:textSize="@dimen/font_32" android:textColor="@color/color_4C4C4C" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_19" android:text="@string/em_calibration_alarm_message3" />
        <TextView android:textSize="@dimen/font_32" android:textColor="@color/color_4C4C4C" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_0" android:text="@string/em_calibration_alarm_message4" />
        <TextView android:textSize="@dimen/font_34" android:textStyle="bold" android:textColor="@color/color_24292B" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_54" android:text="@string/str_adas_dialog_notice3" />
        <TextView android:textSize="@dimen/font_32" android:textColor="@color/color_4C4C4C" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_19" android:text="@string/em_calibration_alarm_message5" />
    </LinearLayout>
    <Button android:textSize="@dimen/font_36" android:textColor="@color/white" android:id="@id/btn_start" android:background="@drawable/bg_layout_background_4a4a4c" android:visibility="visible" android:layout_width="@dimen/dimen_438" android:layout_height="@dimen/dimen_96" android:layout_marginTop="@dimen/dimen_54" android:text="@string/str_adas_dialog_btn_start" android:stateListAnimator="@null" app:layout_constraintStart_toStartOf="@id/llNoticeGroup" app:layout_constraintTop_toBottomOf="@id/llNoticeGroup" />
    <Button android:textSize="@dimen/font_30" android:textColor="@color/color_636569" android:id="@id/btn_cancel" android:background="@drawable/bg_layout_background_e3e6e7" android:visibility="gone" android:layout_width="@dimen/dimen_438" android:layout_height="@dimen/dimen_96" android:text="@string/str_adas_dialog_btn_cancel" android:layout_marginStart="@dimen/dimen_52" android:stateListAnimator="@null" app:layout_constraintBottom_toBottomOf="@id/btn_start" app:layout_constraintStart_toEndOf="@id/btn_start" app:layout_constraintTop_toTopOf="@id/btn_start" />
    <androidx.constraintlayout.widget.Group android:id="@id/checkBoxGroup" android:tag="binding_2" android:layout_width="wrap_content" android:layout_height="wrap_content" app:constraint_referenced_ids="tvTitle,tvCarInfo,clCheckBox1,clCheckBox2,clCheckBox3,llNoticeGroup,btn_start" />
    <androidx.constraintlayout.widget.ConstraintLayout android:tag="binding_3" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:background="@drawable/bg_zeekr" android:layout_width="@dimen/dimen_2044" android:layout_height="@dimen/dimen_821" android:layout_marginTop="@dimen/dimen_203" android:layout_marginStart="@dimen/dimen_258" android:layout_marginEnd="@dimen/dimen_258" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <com.zeekr.zidengineeringmode.view.CircularProgressView android:id="@id/cpProgress" android:tag="binding_4" android:layout_width="@dimen/dimen_300" android:layout_height="@dimen/dimen_300" android:layout_marginTop="@dimen/dimen_180" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <ImageView android:id="@id/ivProgress" android:tag="binding_5" android:layout_width="@dimen/dimen_300" android:layout_height="@dimen/dimen_300" android:layout_marginTop="@dimen/dimen_180" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="@dimen/font_46" android:textColor="@color/color_24292B" android:id="@id/tvOnLineStatus" android:tag="binding_6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_79" android:text="@string/str_adas_dialog_btn_lost" app:layout_constraintEnd_toEndOf="@id/cpProgress" app:layout_constraintStart_toStartOf="@id/cpProgress" app:layout_constraintTop_toBottomOf="@id/cpProgress" />
        <Button android:textSize="@dimen/font_36" android:textColor="@color/white" android:id="@id/btnRestart" android:tag="binding_7" android:background="@drawable/bg_layout_background_4a4a4c" android:visibility="gone" android:layout_width="@dimen/dimen_438" android:layout_height="@dimen/dimen_96" android:layout_marginTop="@dimen/dimen_61" android:text="@string/str_adas_dialog_btn_restart" app:layout_constraintEnd_toEndOf="@id/cpProgress" app:layout_constraintStart_toStartOf="@id/cpProgress" app:layout_constraintTop_toBottomOf="@id/tvOnLineStatus" />
        <LinearLayout android:orientation="horizontal" android:id="@id/llProcessInfo" android:tag="binding_8" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_182" android:layout_marginRight="@dimen/dimen_86" android:layout_marginBottom="@dimen/dimen_20" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent">
            <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                <TextView android:textSize="@dimen/font_42" android:textStyle="bold" android:textColor="@color/color_24292B" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_adas_dialog_notice_process1" />
                <TextView android:textSize="@dimen/font_32" android:textColor="@color/color_4C4C4C" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_24" android:text="@string/em_calibration_process_message1" />
                <TextView android:textSize="@dimen/font_32" android:textColor="@color/color_4C4C4C" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_8" android:text="@string/em_calibration_process_message2" />
                <TextView android:textSize="@dimen/font_32" android:textColor="@color/color_4C4C4C" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_8" android:text="@string/em_calibration_process_message3" />
                <TextView android:textSize="@dimen/font_32" android:textColor="@color/color_4C4C4C" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_8" android:text="@string/em_calibration_process_message4" />
                <TextView android:textSize="@dimen/font_32" android:textColor="@color/color_4C4C4C" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_8" android:text="@string/em_calibration_process_message5" />
                <TextView android:textSize="@dimen/font_32" android:textColor="@color/color_4C4C4C" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_8" android:text="@string/em_calibration_process_message6" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_239" android:layout_weight="1.0">
                <TextView android:textSize="@dimen/font_42" android:textStyle="bold" android:textColor="@color/color_24292B" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_adas_dialog_notice_process2" />
                <TextView android:textSize="@dimen/font_32" android:textColor="@color/color_4C4C4C" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_24" android:text="@string/em_calibration_process_message7" />
                <TextView android:textSize="@dimen/font_32" android:textColor="@color/color_4C4C4C" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_8" android:text="@string/em_calibration_process_message8" />
                <TextView android:textSize="@dimen/font_32" android:textColor="@color/color_4C4C4C" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_8" android:text="@string/em_calibration_process_message9" />
                <TextView android:textSize="@dimen/font_32" android:textColor="@color/color_4C4C4C" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_8" android:text="@string/em_calibration_process_message10" />
                <TextView android:textSize="@dimen/font_32" android:textColor="@color/color_4C4C4C" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_8" android:text="@string/em_calibration_process_message11" />
                <TextView android:textSize="@dimen/font_32" android:textColor="@color/color_4C4C4C" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_8" android:text="@string/em_calibration_process_message12" />
            </LinearLayout>
        </LinearLayout>
        <TextView android:textSize="@dimen/font_42" android:textStyle="bold" android:textColor="@color/black" android:id="@id/tvCalibrateTitle" android:tag="binding_9" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_82" android:layout_marginBottom="@dimen/dimen_200" android:text="@string/str_adas_dialog_notice_failed" android:layout_marginStart="@dimen/dimen_182" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" />
        <TextView android:textSize="@dimen/font_30" android:textColor="@color/color_4C4C4C" android:id="@id/tvCalibrateInfo1" android:tag="binding_10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_28" android:text="@string/em_calibration_lost_message1" app:layout_constraintStart_toStartOf="@id/tvCalibrateTitle" app:layout_constraintTop_toBottomOf="@id/tvCalibrateTitle" />
        <TextView android:textSize="@dimen/font_30" android:textColor="@color/color_4C4C4C" android:id="@id/tvCalibrateInfo2" android:tag="binding_11" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_28" android:text="@string/em_calibration_lost_message2" app:layout_constraintStart_toStartOf="@id/tvCalibrateTitle" app:layout_constraintTop_toBottomOf="@id/tvCalibrateInfo1" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>