<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textStyle="bold" android:id="@id/tv_tcp_st_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_tcp_status" app:layout_constraintBottom_toBottomOf="@id/btn_start_tcp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/btn_start_tcp" style="@style/textViewDefaultStyle" />
    <TextView android:id="@id/tv_tcp_st" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="10.0dip" app:layout_constraintStart_toEndOf="@id/tv_tcp_st_title" app:layout_constraintTop_toTopOf="@id/tv_tcp_st_title" style="@style/textViewDefaultStyle" />
    <Button android:id="@id/btn_start_tcp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_tcp_btn_start" android:layout_marginStart="@dimen/dimen_10" app:layout_constraintStart_toEndOf="@id/tv_tcp_st" app:layout_constraintTop_toTopOf="parent" />
    <Button android:id="@id/btn_stop_tcp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_tcp_btn_stop" android:layout_marginStart="@dimen/dimen_10" app:layout_constraintStart_toEndOf="@id/btn_start_tcp" app:layout_constraintTop_toTopOf="@id/btn_start_tcp" />
    <TextView android:textStyle="bold" android:id="@id/tv_log_edr_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_log_dir_edr_title" app:layout_constraintBottom_toBottomOf="@id/btn_clean_dirs" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/btn_clean_dirs" style="@style/textViewDefaultStyle" />
    <TextView android:id="@id/tv_log_edr_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="@dimen/dimen_10" app:layout_constraintStart_toEndOf="@id/tv_log_edr_title" app:layout_constraintTop_toTopOf="@id/tv_log_edr_title" style="@style/textViewDefaultStyle" />
    <TextView android:textStyle="bold" android:id="@id/tv_log_mcu_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_log_dir_mcu_title" android:layout_marginStart="@dimen/dimen_10" app:layout_constraintStart_toEndOf="@id/tv_log_edr_size" app:layout_constraintTop_toTopOf="@id/tv_log_edr_title" style="@style/textViewDefaultStyle" />
    <TextView android:id="@id/tv_log_mcu_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="@dimen/dimen_10" app:layout_constraintStart_toEndOf="@id/tv_log_mcu_title" app:layout_constraintTop_toTopOf="@id/tv_log_mcu_title" style="@style/textViewDefaultStyle" />
    <Button android:id="@id/btn_clean_dirs" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_log_dir_clean" android:layout_marginStart="@dimen/dimen_10" app:layout_constraintStart_toEndOf="@id/tv_log_mcu_size" app:layout_constraintTop_toBottomOf="@id/btn_start_tcp" />
</androidx.constraintlayout.widget.ConstraintLayout>